[package]
name = "zenoh_dalgo"
version = "0.1.0"
authors = ["kydos <angelo@icorsaro.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
futures = "0.3.15"
async-std = "1.9.0"
flume = "0.10.7"
serde = "1.0.126"
log = "0.4.14"
env_logger = "0.8.4"
bincode = "1.3.3"
zenoh = {git = "https://github.com/eclipse-zenoh/zenoh", branch="master"}

[[example]]
name = "membership"
path = "examples/membership.rs"
